<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">多彩天气</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="run">开始体验</string>
    <string name="celsius">℃</string>
    <string name="low">low:</string>
    <string name="high">high:</string>
    <string name="humidity">湿度:</string>
    <string name="update">更新时间:</string>
    <string name="add_city">添加城市</string>
    <string name="input_city">请输入城市的中文</string>
    <string name="add">添加</string>
    <string name="beijing">北京</string>
    <string name="shanghai">上海</string>
    <string name="guangzhou">广州</string>
    <string name="shenzhen">深圳</string>
    <string name="tianjin">天津</string>
    <string name="dalian">大连</string>
    <string name="nanjing">南京</string>
    <string name="zhuhai">珠海</string>
    <string name="jieyang">揭阳</string>
    
    <string name="addCity">添加城市</string>
    <string name="deleteCity">删除城市</string>
    <string name="changeTheme">切换主题</string>
    <string name="share">分享</string>
    <string name="setting">设置</string>
    
    <string name="select_city">请选择城市</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>

</resources>