<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/addcity_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addcity_title_layout"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/addcity_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:hint="@string/input_city"
            android:singleLine="true" />

        <Button
            android:id="@+id/addcity_btn_add"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_margin="5dp"
            android:text="@string/add"
            android:textSize="20sp"
            android:onClick="onClick" />
    </LinearLayout>

    <Button
        android:id="@+id/addcity_beijing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/addcity_linearLayout"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:background="#00000000"
        android:text="@string/beijing"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="onClick" />

    <Button
        android:id="@+id/addcity_tianjin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addcity_guangzhou"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/addcity_guangzhou"
        android:background="#00000000"
        android:text="@string/tianjin"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="onClick" />

    <Button
        android:id="@+id/addcity_shanghai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addcity_beijing"
        android:layout_below="@+id/addcity_guangzhou"
        android:layout_marginTop="17dp"
        android:background="#00000000"
        android:text="@string/shanghai"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="onClick" />

    <Button
        android:id="@+id/addcity_guangzhou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addcity_shanghai"
        android:layout_below="@+id/addcity_beijing"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="23dp"
        android:background="#00000000"
        android:text="@string/guangzhou"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="onClick" />

    <Button
        android:id="@+id/addcity_zhuhai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addcity_shanghai"
        android:layout_alignBottom="@+id/addcity_shanghai"
        android:layout_toRightOf="@+id/addcity_guangzhou"
        android:background="#00000000"
        android:text="@string/zhuhai"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="onClick" />

    <Button
        android:id="@+id/addcity_shenzhen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addcity_shanghai"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:text="@string/shenzhen"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="onClick" />

    <Button
        android:id="@+id/addcity_dalian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addcity_guangzhou"
        android:layout_marginLeft="21dp"
        android:layout_toRightOf="@+id/addcity_shenzhen"
        android:background="#00000000"
        android:text="@string/dalian"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="onClick" />

    <Button
        android:id="@+id/addcity_nanjing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addcity_shanghai"
        android:layout_alignLeft="@+id/addcity_dalian"
        android:layout_marginLeft="18dp"
        android:background="#00000000"
        android:text="@string/nanjing"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="onClick" />

    <Button
        android:id="@+id/addcity_jieyang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addcity_zhuhai"
        android:layout_alignBottom="@+id/addcity_zhuhai"
        android:layout_toRightOf="@+id/addcity_shenzhen"
        android:background="#00000000"
        android:text="@string/jieyang"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:onClick="onClick" />

    <RelativeLayout
        android:id="@+id/addcity_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="?attr/titleBackground" >

        <TextView
            android:id="@+id/addcity_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/add_city"
            android:textSize="25sp" />

        <Button
            android:id="@+id/addcity_btn_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:onClick="onClick" />
        
    </RelativeLayout>

</RelativeLayout>